--- a/scss/blocks/_books.scss
+++ b/scss/blocks/_books.scss
@@ -10,7 +10,7 @@
         padding-left: 15px;
         display: flex;
         flex-wrap: wrap;
-        gap: 19px;
+        gap: 15px;
         @include for-1025-px {
             overflow: hidden;
             height: 302px;
