--- a/scss/blocks/_site2.scss
+++ b/scss/blocks/_site2.scss
@@ -24,82 +24,6 @@
         grid-template-columns: calc(100vw - 20px);
         grid-gap: 30px;
     }
-    .el21 {
-        width: 48px;
-        height: 48px;
-        left: 109px;
-        top: 546px;
-        background: #e4eafa;
-        @include for-1025-px {
-            left: 48px;
-            top: 295px;
-        }
-    }
-    .el22 {
-        width: 62.25px;
-        height: 62.25px;
-        left: -2px;
-        top: 588px;
-        background: #ffe8cd;
-        opacity: 0.5;
-        @include for-1025-px {
-            width: 98px;
-            height: 98px;
-            left: 776px;
-            top: 1050px;
-            background: #e9e091;
-            opacity: 0.2;
-        }
-    }
-    .el23 {
-        width: 168px;
-        height: 168px;
-        left: -11px;
-        top: 646px;
-        background: #cbd7f6;
-        opacity: 0.5;
-        @include for-1025-px {
-            left: -80px;
-            top: 385px;
-            opacity: 0.2;
-        }
-    }
-    .el24 {
-        width: 168px;
-        height: 168px;
-        left: 918px;
-        top: 964px;
-        background: #91bfe9;
-        opacity: 0.2;
-        @include for-1025-px {
-            left: 842px;
-            top: 795px;
-            background: #caf3ee;
-        }
-    }
-    .el25 {
-        width: 48px;
-        height: 48px;
-        left: 1085px;
-        top: 1322px;
-        @include for-1025-px {
-            display: none;
-        }
-    }
-    .el26 {
-        width: 62.25px;
-        height: 62.25px;
-        left: 1017px;
-        top: 1364px;
-        background: #bb9bff;
-        opacity: 0.2;
-        @include for-1025-px {
-            left: 940px;
-            top: 1180px;
-            background: #ff7f68;
-            opacity: 0.4;
-        }
-    }
     .main-title {
         margin-bottom: 32px;
         font-weight: 600;
